<resources>
    <string name="app_name">HabitBook</string>
    <string name="title_activity_habit_event_details">HabitEventDetailsActivity</string>
    <string name="login_welcome">WELCOME</string>
    <string name="login_uhint">username</string>
    <string name="login_phint">password</string>
    <string name="login_lbtn">login</string>
    <string name="login_sbtn">sign up</string>
    <string name="createaccount_title">Create Account</string>
    <string name="enter_your_uHint">Enter your username</string>
    <string name="createAccount_pw">choose password</string>
    <string name="createAccount_pwr">repeat password</string>
    <string name="createAccount_back">Back</string>
    <string name="createAccount_create">create</string>
    <string name="MM_Title">HabitBook</string>
    <string name="MM_HabitT">Habit Type</string>
    <string name="MM_THabit">Today\'s Habit</string>
    <string name="MM_HabitEH">Habit Event History</string>
    <string name="MM_Online">Online</string>
    <string name="MM_Logout">Logout</string>
    <string name="HabitT_newhabit">New habit</string>
    <string name="CHT_F">F</string>
    <string name="CHT_M">M</string>
    <string name="CHT_Sat">Sa</string>
    <string name="CHT_Su">Su</string>
    <string name="CHT_T">T</string>
    <string name="CHT_Tr">Tr</string>
    <string name="CHT_W">W</string>
    <string name="CHT_Title">Create Habit Type</string>
    <string name="CHT_TitleEditText">Habit Type Title</string>
    <string name="CHT_Schedule">Habit Schedule</string>
    <string name="CHT_Create">Create</string>
    <string name="CHT_StartdateEditText">Starting Date (YY-MM-DD)</string>
    <string name="CHT_ReasonEditText">Your Reason</string>
    <string name="CHT_Back">Back</string>
    <string name="HTL_Back">Back</string>
    <string name="HTL_Refresh">Refresh</string>
    <string name="HTD_Delete">delete</string>
    <string name="HTD_Update">update</string>
    <string name="HTD_Reason">Reason</string>
    <string name="HTD_AddEvent">Add Event</string>
    <string name="HTD_Title">Title</string>
    <string name="HTD_StartDate">Start Date</string>
    <string name="HTD_HabitTypeDetails">Habit Type Details</string>
    <string name="CHE_Create">Create</string>
    <string name="CHE_AddPhoto">Add Photo</string>
    <string name="CHE_AddTitle">Add a Title</string>
    <string name="CHE_Comment">Comment</string>
    <string name="CHE_CreateEvent">Create Event</string>
    <string name="CHE_Upload">Upload</string>
    <string name="CHE_Back">Back</string>
    <string name="title_activity_main">Today\'s Habits</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_habit_type_list2">HabitTypeList</string>
    <string name="title_activity_habit_event2">HabitEvent</string>
    <string name="title_activity_habit_event_history2">HabitEventHistory</string>
    <string name="title_activity_online">Online</string>
    <string name="title_activity_maps">Map</string>
</resources>
