<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.notcmput301.habitbook.MainMenuActivity"
    android:background="@drawable/background">

    <Button
        android:id="@+id/MainMenu_HabitT"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="MMHabitType"
        android:text="@string/MM_HabitT"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenu_title" />

    <TextView
        android:id="@+id/MainMenu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/MM_Title"
        android:textSize="45sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MainMenu_THabit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="MMTodayHabit"
        android:text="@string/MM_THabit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenu_HabitT" />

    <Button
        android:id="@+id/MainMenu_HabitEH"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="MMHabitEventHistory"
        android:text="@string/MM_HabitEH"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenu_THabit" />

    <Button
        android:id="@+id/MainMenu_Online"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@android:dimen/thumbnail_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="MMOnline"
        android:text="@string/MM_Online"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenu_HabitEH" />

    <Button
        android:id="@+id/MainMenu_Logout"
        style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="MMLogout"
        android:text="@string/MM_Logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainMenu_Online" />
</android.support.constraint.ConstraintLayout>
