<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.notcmput301.habitbook.CreateHabitEventActivity"
android:background="@drawable/backgroundcreatehabitevent">

<TextView
    android:id="@+id/CHE_CreateEvent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    android:text="@string/CHE_CreateEvent"
    android:textColor="#FFFFFF"
    android:textSize="30sp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/CHE_Title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/CHE_AddTitle"
    android:textAlignment="center"
    android:inputType="textPersonName"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    android:layout_marginTop="0dp"
    app:layout_constraintTop_toBottomOf="@+id/CHE_AddPhoto" />

<EditText
    android:id="@+id/CHE_Comment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:ems="10"
    android:hint="@string/CHE_Comment"
    android:inputType="textPersonName"
    android:textAlignment="center"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/CHE_Title" />

<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CHE_Image"
    android:layout_width="208dp"
    android:layout_height="199dp"
    android:layout_marginTop="16dp"
    android:src="@drawable/background"
    app:civ_border_color="#FFFFFF"
    app:civ_border_width="2dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/CHE_CreateEvent" />

<Button
    android:id="@+id/CHE_AddPhoto"
    style="@style/Widget.AppCompat.Button.Borderless.Colored"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:onClick="addImage"
    android:text="@string/CHE_AddPhoto"
    android:textSize="10sp"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="8dp"
    app:layout_constraintTop_toBottomOf="@+id/CHE_Image" />

<Button
    android:id="@+id/CHE_Create"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/CHE_Create"
    android:layout_marginStart="85dp"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="85dp"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/CHE_Comment" />

<Button
    android:id="@+id/CHE_Back"
    style="@style/Widget.AppCompat.Button.Colored"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="85dp"
    android:onClick="back"
    android:text="@string/CHE_Back"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginRight="85dp"
    android:layout_marginTop="16dp"
    app:layout_constraintTop_toBottomOf="@+id/CHE_Comment" />

</android.support.constraint.ConstraintLayout>


