<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.notcmput301.habitbook.HabitTypeDetailsActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="159dp"
        android:layout_height="184dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofinal"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/HTD_T"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_M"
        tools:layout_editor_absoluteX="56dp" />

    <CheckBox
        android:id="@+id/HTD_W"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_T"
        tools:layout_editor_absoluteX="113dp" />

    <CheckBox
        android:id="@+id/HTD_Tr"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_W"
        tools:layout_editor_absoluteX="152dp" />

    <CheckBox
        android:id="@+id/HTD_F"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_Tr"
        tools:layout_editor_absoluteX="184dp" />

    <CheckBox
        android:id="@+id/HTD_Sa"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_F"
        tools:layout_editor_absoluteX="216dp" />

    <CheckBox
        android:id="@+id/HTD_Su"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toEndOf="@+id/HTD_Sa"
        tools:layout_editor_absoluteX="240dp" />

    <CheckBox
        android:id="@+id/HTD_M"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25" />

    <Button
        android:id="@+id/HTD_Delete"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="32dp"
        android:onClick="HTDDelete"
        android:text="@string/HTD_Delete"
        app:layout_constraintBottom_toTopOf="@+id/HTD_AddEvent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/HTD_Back"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:onClick="HTDback"
        android:text="@string/CHT_Back"
        app:layout_constraintBottom_toTopOf="@+id/HTD_AddEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/HTD_Update"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:onClick="HTDUpdate"
        android:text="@string/HTD_Update"
        app:layout_constraintBottom_toTopOf="@+id/HTD_AddEvent"
        app:layout_constraintEnd_toStartOf="@+id/HTD_Back"
        app:layout_constraintLeft_toRightOf="@+id/HTD_Delete"
        app:layout_constraintRight_toLeftOf="@+id/HTD_Back"
        app:layout_constraintStart_toEndOf="@+id/HTD_Delete" />

    <Button
        android:id="@+id/HTD_AddEvent"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="HTDAddEvent"
        android:text="@string/HTD_AddEvent"
        android:background="@drawable/roundedittext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/HTD_TitleE"
        android:layout_width="wrap_content"
        android:layout_marginBottom="32dp"

        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/roundedittext"
        android:inputType="textNoSuggestions"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/HTD_ReasonE"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/HTD_ReasonE"
        android:layout_width="wrap_content"
        android:layout_marginBottom="32dp"

        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/roundedittext"
        android:inputType="textNoSuggestions"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/HTD_StartDateE"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/HTD_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/HTD_Title"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/HTD_TitleE"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/HTD_Reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/HTD_Reason"
        android:textColor="#FFFF"
        app:layout_constraintBottom_toTopOf="@+id/HTD_ReasonE"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/HTD_StartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/HTD_StartDate"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/HTD_StartDateE"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="@string/HTD_StartDate" />

    <EditText
        android:id="@+id/HTD_StartDateE"
        android:layout_width="wrap_content"
        android:layout_marginBottom="32dp"

        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/roundedittext"
        android:inputType="textNoSuggestions"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/HTD_Tr"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
