<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.notcmput301.habitbook.CreateHabitEventActivity"
    android:background="@drawable/backgroundcreatehabitevent">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:onClick="Location"
        android:text="Location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Image" />

    <TextView
        android:id="@+id/CHE_CreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Event Detail"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CHE_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/CHE_AddTitle"
        android:textAlignment="center"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Image" />

    <EditText
        android:id="@+id/CHE_Comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/CHE_Comment"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Title" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/CHE_Image"
        android:layout_width="208dp"
        android:layout_height="199dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/background"
        app:civ_border_color="#FFFFFF"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHE_CreateEvent" />

    <Button
        android:id="@+id/DeleteEvent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="26dp"
        android:onClick="delete"
        android:text="Delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Comment" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"
        android:onClick="back"
        android:text="@string/CHE_Back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Comment" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:onClick="update"
        android:text="Update"
        app:layout_constraintTop_toBottomOf="@+id/CHE_Comment"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        android:layout_marginRight="8dp"
        app:layout_constraintLeft_toRightOf="@+id/DeleteEvent"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>